@@ -35,6 +35,8 @@ Version 1.7.0-svn:
      Czech, German, Finnish, Hebrew, Italian, Russian, Slovak, Turkish
    * Updated CJK character range
    * Fixed word wrapping in CJK languages (patch #1140 from sylecn)
+ * Multiplayer server:
+   * Implemented automatic saving of game replays.
  * User interface:
    * Fixed bug #13257: Attack dialog always uses the active name of a weapon
      special
